Lots of stuff
Duplicate code removal in framework
Final expected results for paper
Interface with jsunpack for JavaScript extraction from HTML
Remove unused jam#* predicate types